rename service 'Server' to 'BookServer'
