# proto/main.pb.go
@@ -552,53 +552,53 @@ var file_main_proto_rawDesc = []byte{
 	0x6f, 0x6f, 0x6b, 0x52, 0x73, 0x70, 0x12, 0x17, 0x0a, 0x07, 0x62, 0x6f, 0x6f, 0x6b, 0x5f, 0x69,
 	0x64, 0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x52, 0x06, 0x62, 0x6f, 0x6f, 0x6b, 0x49, 0x64, 0x12,
 	0x12, 0x0a, 0x04, 0x63, 0x6f, 0x64, 0x65, 0x18, 0x02, 0x20, 0x01, 0x28, 0x05, 0x52, 0x04, 0x63,
-	0x6f, 0x64, 0x65, 0x32, 0xba, 0x05, 0x0a, 0x06, 0x53, 0x65, 0x72, 0x76, 0x65, 0x72, 0x12, 0x79,
-	0x0a, 0x04, 0x48, 0x6f, 0x6d, 0x65, 0x12, 0x16, 0x2e, 0x62, 0x6f, 0x6f, 0x6b, 0x73, 0x65, 0x72,
-	0x76, 0x65, 0x72, 0x6d, 0x69, 0x63, 0x72, 0x6f, 0x2e, 0x45, 0x6d, 0x70, 0x74, 0x79, 0x1a, 0x1a,
-	0x2e, 0x62, 0x6f, 0x6f, 0x6b, 0x73, 0x65, 0x72, 0x76, 0x65, 0x72, 0x6d, 0x69, 0x63, 0x72, 0x6f,
-	0x2e, 0x53, 0x74, 0x61, 0x74, 0x75, 0x73, 0x52, 0x73, 0x70, 0x22, 0x3d, 0xaa, 0x84, 0x9e, 0x03,
-	0x2f, 0x2a, 0x0b, 0x47, 0x65, 0x74, 0x48, 0x6f, 0x6d, 0x65, 0x50, 0x61, 0x67, 0x65, 0x42, 0x20,
-	0x0a, 0x1e, 0x12, 0x1c, 0x0a, 0x1a, 0x2e, 0x62, 0x6f, 0x6f, 0x6b, 0x73, 0x65, 0x72, 0x76, 0x65,
-	0x72, 0x6d, 0x69, 0x63, 0x72, 0x6f, 0x2e, 0x53, 0x74, 0x61, 0x74, 0x75, 0x73, 0x52, 0x73, 0x70,
-	0xb2, 0xea, 0xff, 0xf9, 0x01, 0x03, 0x12, 0x01, 0x2f, 0x12, 0x8e, 0x01, 0x0a, 0x04, 0x50, 0x75,
-	0x73, 0x68, 0x12, 0x19, 0x2e, 0x62, 0x6f, 0x6f, 0x6b, 0x73, 0x65, 0x72, 0x76, 0x65, 0x72, 0x6d,
-	0x69, 0x63, 0x72, 0x6f, 0x2e, 0x70, 0x6f, 0x73, 0x74, 0x42, 0x6f, 0x6f, 0x6b, 0x1a, 0x26, 0x2e,
-	0x62, 0x6f, 0x6f, 0x6b, 0x73, 0x65, 0x72, 0x76, 0x65, 0x72, 0x6d, 0x69, 0x63, 0x72, 0x6f, 0x2e,
-	0x73, 0x74, 0x61, 0x74, 0x75, 0x73, 0x55, 0x70, 0x6c, 0x6f, 0x61, 0x64, 0x65, 0x64, 0x42, 0x6f,
-	0x6f, 0x6b, 0x52, 0x73, 0x70, 0x22, 0x43, 0xaa, 0x84, 0x9e, 0x03, 0x2e, 0x2a, 0x0a, 0x55, 0x70,
-	0x6c, 0x6f, 0x61, 0x64, 0x42, 0x6f, 0x6f, 0x6b, 0x42, 0x20, 0x0a, 0x1e, 0x12, 0x1c, 0x0a, 0x1a,
-	0x2e, 0x62, 0x6f, 0x6f, 0x6b, 0x73, 0x65, 0x72, 0x76, 0x65, 0x72, 0x6d, 0x69, 0x63, 0x72, 0x6f,
-	0x2e, 0x53, 0x74, 0x61, 0x74, 0x75, 0x73, 0x52, 0x73, 0x70, 0xb2, 0xea, 0xff, 0xf9, 0x01, 0x0a,
-	0x22, 0x05, 0x2f, 0x70, 0x75, 0x73, 0x68, 0x3a, 0x01, 0x2a, 0x12, 0x7c, 0x0a, 0x04, 0x42, 0x6f,
-	0x6f, 0x6b, 0x12, 0x18, 0x2e, 0x62, 0x6f, 0x6f, 0x6b, 0x73, 0x65, 0x72, 0x76, 0x65, 0x72, 0x6d,
-	0x69, 0x63, 0x72, 0x6f, 0x2e, 0x67, 0x65, 0x74, 0x42, 0x6f, 0x6f, 0x6b, 0x1a, 0x1b, 0x2e, 0x62,
-	0x6f, 0x6f, 0x6b, 0x73, 0x65, 0x72, 0x76, 0x65, 0x72, 0x6d, 0x69, 0x63, 0x72, 0x6f, 0x2e, 0x67,
-	0x65, 0x74, 0x42, 0x6f, 0x6f, 0x6b, 0x52, 0x73, 0x70, 0x22, 0x3d, 0xaa, 0x84, 0x9e, 0x03, 0x2b,
-	0x2a, 0x07, 0x47, 0x65, 0x74, 0x42, 0x6f, 0x6f, 0x6b, 0x42, 0x20, 0x0a, 0x1e, 0x12, 0x1c, 0x0a,
-	0x1a, 0x2e, 0x62, 0x6f, 0x6f, 0x6b, 0x73, 0x65, 0x72, 0x76, 0x65, 0x72, 0x6d, 0x69, 0x63, 0x72,
-	0x6f, 0x2e, 0x53, 0x74, 0x61, 0x74, 0x75, 0x73, 0x52, 0x73, 0x70, 0xb2, 0xea, 0xff, 0xf9, 0x01,
-	0x07, 0x12, 0x05, 0x2f, 0x62, 0x6f, 0x6f, 0x6b, 0x12, 0x8a, 0x01, 0x0a, 0x0b, 0x47, 0x65, 0x74,
-	0x41, 0x6c, 0x6c, 0x42, 0x6f, 0x6f, 0x6b, 0x73, 0x12, 0x16, 0x2e, 0x62, 0x6f, 0x6f, 0x6b, 0x73,
-	0x65, 0x72, 0x76, 0x65, 0x72, 0x6d, 0x69, 0x63, 0x72, 0x6f, 0x2e, 0x45, 0x6d, 0x70, 0x74, 0x79,
-	0x1a, 0x1c, 0x2e, 0x62, 0x6f, 0x6f, 0x6b, 0x73, 0x65, 0x72, 0x76, 0x65, 0x72, 0x6d, 0x69, 0x63,
-	0x72, 0x6f, 0x2e, 0x67, 0x65, 0x74, 0x41, 0x6c, 0x6c, 0x42, 0x6f, 0x6f, 0x6b, 0x73, 0x22, 0x45,
-	0xaa, 0x84, 0x9e, 0x03, 0x2f, 0x2a, 0x0b, 0x47, 0x65, 0x74, 0x41, 0x6c, 0x6c, 0x42, 0x6f, 0x6f,
-	0x6b, 0x73, 0x42, 0x20, 0x0a, 0x1e, 0x12, 0x1c, 0x0a, 0x1a, 0x2e, 0x62, 0x6f, 0x6f, 0x6b, 0x73,
+	0x6f, 0x64, 0x65, 0x32, 0xbe, 0x05, 0x0a, 0x0a, 0x42, 0x6f, 0x6f, 0x6b, 0x53, 0x65, 0x72, 0x76,
+	0x65, 0x72, 0x12, 0x79, 0x0a, 0x04, 0x48, 0x6f, 0x6d, 0x65, 0x12, 0x16, 0x2e, 0x62, 0x6f, 0x6f,
+	0x6b, 0x73, 0x65, 0x72, 0x76, 0x65, 0x72, 0x6d, 0x69, 0x63, 0x72, 0x6f, 0x2e, 0x45, 0x6d, 0x70,
+	0x74, 0x79, 0x1a, 0x1a, 0x2e, 0x62, 0x6f, 0x6f, 0x6b, 0x73, 0x65, 0x72, 0x76, 0x65, 0x72, 0x6d,
+	0x69, 0x63, 0x72, 0x6f, 0x2e, 0x53, 0x74, 0x61, 0x74, 0x75, 0x73, 0x52, 0x73, 0x70, 0x22, 0x3d,
+	0xaa, 0x84, 0x9e, 0x03, 0x2f, 0x2a, 0x0b, 0x47, 0x65, 0x74, 0x48, 0x6f, 0x6d, 0x65, 0x50, 0x61,
+	0x67, 0x65, 0x42, 0x20, 0x0a, 0x1e, 0x12, 0x1c, 0x0a, 0x1a, 0x2e, 0x62, 0x6f, 0x6f, 0x6b, 0x73,
 	0x65, 0x72, 0x76, 0x65, 0x72, 0x6d, 0x69, 0x63, 0x72, 0x6f, 0x2e, 0x53, 0x74, 0x61, 0x74, 0x75,
-	0x73, 0x52, 0x73, 0x70, 0xb2, 0xea, 0xff, 0xf9, 0x01, 0x0b, 0x12, 0x09, 0x2f, 0x61, 0x6c, 0x6c,
-	0x62, 0x6f, 0x6f, 0x6b, 0x73, 0x12, 0x98, 0x01, 0x0a, 0x12, 0x47, 0x65, 0x74, 0x41, 0x6c, 0x6c,
-	0x42, 0x6f, 0x6f, 0x6b, 0x73, 0x41, 0x6e, 0x64, 0x53, 0x6f, 0x72, 0x74, 0x12, 0x19, 0x2e, 0x62,
-	0x6f, 0x6f, 0x6b, 0x73, 0x65, 0x72, 0x76, 0x65, 0x72, 0x6d, 0x69, 0x63, 0x72, 0x6f, 0x2e, 0x73,
-	0x6f, 0x72, 0x74, 0x54, 0x79, 0x70, 0x65, 0x1a, 0x23, 0x2e, 0x62, 0x6f, 0x6f, 0x6b, 0x73, 0x65,
-	0x72, 0x76, 0x65, 0x72, 0x6d, 0x69, 0x63, 0x72, 0x6f, 0x2e, 0x67, 0x65, 0x74, 0x41, 0x6c, 0x6c,
-	0x42, 0x6f, 0x6f, 0x6b, 0x73, 0x41, 0x6e, 0x64, 0x53, 0x6f, 0x72, 0x74, 0x22, 0x42, 0xaa, 0x84,
-	0x9e, 0x03, 0x2f, 0x2a, 0x0b, 0x47, 0x65, 0x74, 0x41, 0x6c, 0x6c, 0x42, 0x6f, 0x6f, 0x6b, 0x73,
-	0x42, 0x20, 0x0a, 0x1e, 0x12, 0x1c, 0x0a, 0x1a, 0x2e, 0x62, 0x6f, 0x6f, 0x6b, 0x73, 0x65, 0x72,
-	0x76, 0x65, 0x72, 0x6d, 0x69, 0x63, 0x72, 0x6f, 0x2e, 0x53, 0x74, 0x61, 0x74, 0x75, 0x73, 0x52,
-	0x73, 0x70, 0xb2, 0xea, 0xff, 0xf9, 0x01, 0x08, 0x12, 0x06, 0x2f, 0x62, 0x6f, 0x6f, 0x6b, 0x73,
-	0x42, 0x20, 0x5a, 0x1e, 0x65, 0x78, 0x61, 0x6d, 0x70, 0x6c, 0x65, 0x2e, 0x6f, 0x72, 0x67, 0x2f,
-	0x62, 0x6f, 0x6f, 0x6b, 0x73, 0x65, 0x72, 0x76, 0x65, 0x72, 0x6d, 0x69, 0x63, 0x72, 0x6f, 0x3b,
-	0x70, 0x62, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
+	0x73, 0x52, 0x73, 0x70, 0xb2, 0xea, 0xff, 0xf9, 0x01, 0x03, 0x12, 0x01, 0x2f, 0x12, 0x8e, 0x01,
+	0x0a, 0x04, 0x50, 0x75, 0x73, 0x68, 0x12, 0x19, 0x2e, 0x62, 0x6f, 0x6f, 0x6b, 0x73, 0x65, 0x72,
+	0x76, 0x65, 0x72, 0x6d, 0x69, 0x63, 0x72, 0x6f, 0x2e, 0x70, 0x6f, 0x73, 0x74, 0x42, 0x6f, 0x6f,
+	0x6b, 0x1a, 0x26, 0x2e, 0x62, 0x6f, 0x6f, 0x6b, 0x73, 0x65, 0x72, 0x76, 0x65, 0x72, 0x6d, 0x69,
+	0x63, 0x72, 0x6f, 0x2e, 0x73, 0x74, 0x61, 0x74, 0x75, 0x73, 0x55, 0x70, 0x6c, 0x6f, 0x61, 0x64,
+	0x65, 0x64, 0x42, 0x6f, 0x6f, 0x6b, 0x52, 0x73, 0x70, 0x22, 0x43, 0xaa, 0x84, 0x9e, 0x03, 0x2e,
+	0x2a, 0x0a, 0x55, 0x70, 0x6c, 0x6f, 0x61, 0x64, 0x42, 0x6f, 0x6f, 0x6b, 0x42, 0x20, 0x0a, 0x1e,
+	0x12, 0x1c, 0x0a, 0x1a, 0x2e, 0x62, 0x6f, 0x6f, 0x6b, 0x73, 0x65, 0x72, 0x76, 0x65, 0x72, 0x6d,
+	0x69, 0x63, 0x72, 0x6f, 0x2e, 0x53, 0x74, 0x61, 0x74, 0x75, 0x73, 0x52, 0x73, 0x70, 0xb2, 0xea,
+	0xff, 0xf9, 0x01, 0x0a, 0x22, 0x05, 0x2f, 0x70, 0x75, 0x73, 0x68, 0x3a, 0x01, 0x2a, 0x12, 0x7c,
+	0x0a, 0x04, 0x42, 0x6f, 0x6f, 0x6b, 0x12, 0x18, 0x2e, 0x62, 0x6f, 0x6f, 0x6b, 0x73, 0x65, 0x72,
+	0x76, 0x65, 0x72, 0x6d, 0x69, 0x63, 0x72, 0x6f, 0x2e, 0x67, 0x65, 0x74, 0x42, 0x6f, 0x6f, 0x6b,
+	0x1a, 0x1b, 0x2e, 0x62, 0x6f, 0x6f, 0x6b, 0x73, 0x65, 0x72, 0x76, 0x65, 0x72, 0x6d, 0x69, 0x63,
+	0x72, 0x6f, 0x2e, 0x67, 0x65, 0x74, 0x42, 0x6f, 0x6f, 0x6b, 0x52, 0x73, 0x70, 0x22, 0x3d, 0xaa,
+	0x84, 0x9e, 0x03, 0x2b, 0x2a, 0x07, 0x47, 0x65, 0x74, 0x42, 0x6f, 0x6f, 0x6b, 0x42, 0x20, 0x0a,
+	0x1e, 0x12, 0x1c, 0x0a, 0x1a, 0x2e, 0x62, 0x6f, 0x6f, 0x6b, 0x73, 0x65, 0x72, 0x76, 0x65, 0x72,
+	0x6d, 0x69, 0x63, 0x72, 0x6f, 0x2e, 0x53, 0x74, 0x61, 0x74, 0x75, 0x73, 0x52, 0x73, 0x70, 0xb2,
+	0xea, 0xff, 0xf9, 0x01, 0x07, 0x12, 0x05, 0x2f, 0x62, 0x6f, 0x6f, 0x6b, 0x12, 0x8a, 0x01, 0x0a,
+	0x0b, 0x47, 0x65, 0x74, 0x41, 0x6c, 0x6c, 0x42, 0x6f, 0x6f, 0x6b, 0x73, 0x12, 0x16, 0x2e, 0x62,
+	0x6f, 0x6f, 0x6b, 0x73, 0x65, 0x72, 0x76, 0x65, 0x72, 0x6d, 0x69, 0x63, 0x72, 0x6f, 0x2e, 0x45,
+	0x6d, 0x70, 0x74, 0x79, 0x1a, 0x1c, 0x2e, 0x62, 0x6f, 0x6f, 0x6b, 0x73, 0x65, 0x72, 0x76, 0x65,
+	0x72, 0x6d, 0x69, 0x63, 0x72, 0x6f, 0x2e, 0x67, 0x65, 0x74, 0x41, 0x6c, 0x6c, 0x42, 0x6f, 0x6f,
+	0x6b, 0x73, 0x22, 0x45, 0xaa, 0x84, 0x9e, 0x03, 0x2f, 0x2a, 0x0b, 0x47, 0x65, 0x74, 0x41, 0x6c,
+	0x6c, 0x42, 0x6f, 0x6f, 0x6b, 0x73, 0x42, 0x20, 0x0a, 0x1e, 0x12, 0x1c, 0x0a, 0x1a, 0x2e, 0x62,
+	0x6f, 0x6f, 0x6b, 0x73, 0x65, 0x72, 0x76, 0x65, 0x72, 0x6d, 0x69, 0x63, 0x72, 0x6f, 0x2e, 0x53,
+	0x74, 0x61, 0x74, 0x75, 0x73, 0x52, 0x73, 0x70, 0xb2, 0xea, 0xff, 0xf9, 0x01, 0x0b, 0x12, 0x09,
+	0x2f, 0x61, 0x6c, 0x6c, 0x62, 0x6f, 0x6f, 0x6b, 0x73, 0x12, 0x98, 0x01, 0x0a, 0x12, 0x47, 0x65,
+	0x74, 0x41, 0x6c, 0x6c, 0x42, 0x6f, 0x6f, 0x6b, 0x73, 0x41, 0x6e, 0x64, 0x53, 0x6f, 0x72, 0x74,
+	0x12, 0x19, 0x2e, 0x62, 0x6f, 0x6f, 0x6b, 0x73, 0x65, 0x72, 0x76, 0x65, 0x72, 0x6d, 0x69, 0x63,
+	0x72, 0x6f, 0x2e, 0x73, 0x6f, 0x72, 0x74, 0x54, 0x79, 0x70, 0x65, 0x1a, 0x23, 0x2e, 0x62, 0x6f,
+	0x6f, 0x6b, 0x73, 0x65, 0x72, 0x76, 0x65, 0x72, 0x6d, 0x69, 0x63, 0x72, 0x6f, 0x2e, 0x67, 0x65,
+	0x74, 0x41, 0x6c, 0x6c, 0x42, 0x6f, 0x6f, 0x6b, 0x73, 0x41, 0x6e, 0x64, 0x53, 0x6f, 0x72, 0x74,
+	0x22, 0x42, 0xaa, 0x84, 0x9e, 0x03, 0x2f, 0x2a, 0x0b, 0x47, 0x65, 0x74, 0x41, 0x6c, 0x6c, 0x42,
+	0x6f, 0x6f, 0x6b, 0x73, 0x42, 0x20, 0x0a, 0x1e, 0x12, 0x1c, 0x0a, 0x1a, 0x2e, 0x62, 0x6f, 0x6f,
+	0x6b, 0x73, 0x65, 0x72, 0x76, 0x65, 0x72, 0x6d, 0x69, 0x63, 0x72, 0x6f, 0x2e, 0x53, 0x74, 0x61,
+	0x74, 0x75, 0x73, 0x52, 0x73, 0x70, 0xb2, 0xea, 0xff, 0xf9, 0x01, 0x08, 0x12, 0x06, 0x2f, 0x62,
+	0x6f, 0x6f, 0x6b, 0x73, 0x42, 0x20, 0x5a, 0x1e, 0x65, 0x78, 0x61, 0x6d, 0x70, 0x6c, 0x65, 0x2e,
+	0x6f, 0x72, 0x67, 0x2f, 0x62, 0x6f, 0x6f, 0x6b, 0x73, 0x65, 0x72, 0x76, 0x65, 0x72, 0x6d, 0x69,
+	0x63, 0x72, 0x6f, 0x3b, 0x70, 0x62, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
 }
 
 var (
@@ -627,16 +627,16 @@ var file_main_proto_goTypes = []interface{}{
 }
 var file_main_proto_depIdxs = []int32{
 	6, // 0: bookservermicro.getAllBooksAndSort.book:type_name -> bookservermicro.getBookRsp
-	0, // 1: bookservermicro.Server.Home:input_type -> bookservermicro.Empty
-	5, // 2: bookservermicro.Server.Push:input_type -> bookservermicro.postBook
-	1, // 3: bookservermicro.Server.Book:input_type -> bookservermicro.getBook
-	0, // 4: bookservermicro.Server.GetAllBooks:input_type -> bookservermicro.Empty
-	2, // 5: bookservermicro.Server.GetAllBooksAndSort:input_type -> bookservermicro.sortType
-	7, // 6: bookservermicro.Server.Home:output_type -> bookservermicro.StatusRsp
-	8, // 7: bookservermicro.Server.Push:output_type -> bookservermicro.statusUploadedBookRsp
-	6, // 8: bookservermicro.Server.Book:output_type -> bookservermicro.getBookRsp
-	3, // 9: bookservermicro.Server.GetAllBooks:output_type -> bookservermicro.getAllBooks
-	4, // 10: bookservermicro.Server.GetAllBooksAndSort:output_type -> bookservermicro.getAllBooksAndSort
+	0, // 1: bookservermicro.BookServer.Home:input_type -> bookservermicro.Empty
+	5, // 2: bookservermicro.BookServer.Push:input_type -> bookservermicro.postBook
+	1, // 3: bookservermicro.BookServer.Book:input_type -> bookservermicro.getBook
+	0, // 4: bookservermicro.BookServer.GetAllBooks:input_type -> bookservermicro.Empty
+	2, // 5: bookservermicro.BookServer.GetAllBooksAndSort:input_type -> bookservermicro.sortType
+	7, // 6: bookservermicro.BookServer.Home:output_type -> bookservermicro.StatusRsp
+	8, // 7: bookservermicro.BookServer.Push:output_type -> bookservermicro.statusUploadedBookRsp
+	6, // 8: bookservermicro.BookServer.Book:output_type -> bookservermicro.getBookRsp
+	3, // 9: bookservermicro.BookServer.GetAllBooks:output_type -> bookservermicro.getAllBooks
+	4, // 10: bookservermicro.BookServer.GetAllBooksAndSort:output_type -> bookservermicro.getAllBooksAndSort
 	6, // [6:11] is the sub-list for method output_type
 	1, // [1:6] is the sub-list for method input_type
 	1, // [1:1] is the sub-list for extension type_name
