# proto/main_micro_http.pb.go
@@ -13,16 +13,16 @@ import (
 	http "net/http"
 )
 
-type serverClient struct {
+type bookServerClient struct {
 	c    client.Client
 	name string
 }
 
-func NewServerClient(name string, c client.Client) ServerClient {
-	return &serverClient{c: c, name: name}
+func NewBookServerClient(name string, c client.Client) BookServerClient {
+	return &bookServerClient{c: c, name: name}
 }
 
-func (c *serverClient) Home(ctx context.Context, req *Empty, opts ...client.CallOption) (*StatusRsp, error) {
+func (c *bookServerClient) Home(ctx context.Context, req *Empty, opts ...client.CallOption) (*StatusRsp, error) {
 	errmap := make(map[string]interface{}, 1)
 	errmap["default"] = &StatusRsp{}
 	opts = append(opts,
@@ -33,14 +33,14 @@ func (c *serverClient) Home(ctx context.Context, req *Empty, opts ...client.Call
 		v3.Path("/"),
 	)
 	rsp := &StatusRsp{}
-	err := c.c.Call(ctx, c.c.NewRequest(c.name, "Server.Home", req), rsp, opts...)
+	err := c.c.Call(ctx, c.c.NewRequest(c.name, "BookServer.Home", req), rsp, opts...)
 	if err != nil {
 		return nil, err
 	}
 	return rsp, nil
 }
 
-func (c *serverClient) Push(ctx context.Context, req *PostBook, opts ...client.CallOption) (*StatusUploadedBookRsp, error) {
+func (c *bookServerClient) Push(ctx context.Context, req *PostBook, opts ...client.CallOption) (*StatusUploadedBookRsp, error) {
 	errmap := make(map[string]interface{}, 1)
 	errmap["default"] = &StatusRsp{}
 	opts = append(opts,
@@ -52,14 +52,14 @@ func (c *serverClient) Push(ctx context.Context, req *PostBook, opts ...client.C
 		v3.Body("*"),
 	)
 	rsp := &StatusUploadedBookRsp{}
-	err := c.c.Call(ctx, c.c.NewRequest(c.name, "Server.Push", req), rsp, opts...)
+	err := c.c.Call(ctx, c.c.NewRequest(c.name, "BookServer.Push", req), rsp, opts...)
 	if err != nil {
 		return nil, err
 	}
 	return rsp, nil
 }
 
-func (c *serverClient) Book(ctx context.Context, req *GetBook, opts ...client.CallOption) (*GetBookRsp, error) {
+func (c *bookServerClient) Book(ctx context.Context, req *GetBook, opts ...client.CallOption) (*GetBookRsp, error) {
 	errmap := make(map[string]interface{}, 1)
 	errmap["default"] = &StatusRsp{}
 	opts = append(opts,
@@ -70,14 +70,14 @@ func (c *serverClient) Book(ctx context.Context, req *GetBook, opts ...client.Ca
 		v3.Path("/book"),
 	)
 	rsp := &GetBookRsp{}
-	err := c.c.Call(ctx, c.c.NewRequest(c.name, "Server.Book", req), rsp, opts...)
+	err := c.c.Call(ctx, c.c.NewRequest(c.name, "BookServer.Book", req), rsp, opts...)
 	if err != nil {
 		return nil, err
 	}
 	return rsp, nil
 }
 
-func (c *serverClient) GetAllBooks(ctx context.Context, req *Empty, opts ...client.CallOption) (*GetAllBooks, error) {
+func (c *bookServerClient) GetAllBooks(ctx context.Context, req *Empty, opts ...client.CallOption) (*GetAllBooks, error) {
 	errmap := make(map[string]interface{}, 1)
 	errmap["default"] = &StatusRsp{}
 	opts = append(opts,
@@ -88,14 +88,14 @@ func (c *serverClient) GetAllBooks(ctx context.Context, req *Empty, opts ...clie
 		v3.Path("/allbooks"),
 	)
 	rsp := &GetAllBooks{}
-	err := c.c.Call(ctx, c.c.NewRequest(c.name, "Server.GetAllBooks", req), rsp, opts...)
+	err := c.c.Call(ctx, c.c.NewRequest(c.name, "BookServer.GetAllBooks", req), rsp, opts...)
 	if err != nil {
 		return nil, err
 	}
 	return rsp, nil
 }
 
-func (c *serverClient) GetAllBooksAndSort(ctx context.Context, req *SortType, opts ...client.CallOption) (*GetAllBooksAndSort, error) {
+func (c *bookServerClient) GetAllBooksAndSort(ctx context.Context, req *SortType, opts ...client.CallOption) (*GetAllBooksAndSort, error) {
 	errmap := make(map[string]interface{}, 1)
 	errmap["default"] = &StatusRsp{}
 	opts = append(opts,
@@ -106,50 +106,50 @@ func (c *serverClient) GetAllBooksAndSort(ctx context.Context, req *SortType, op
 		v3.Path("/books"),
 	)
 	rsp := &GetAllBooksAndSort{}
-	err := c.c.Call(ctx, c.c.NewRequest(c.name, "Server.GetAllBooksAndSort", req), rsp, opts...)
+	err := c.c.Call(ctx, c.c.NewRequest(c.name, "BookServer.GetAllBooksAndSort", req), rsp, opts...)
 	if err != nil {
 		return nil, err
 	}
 	return rsp, nil
 }
 
-type serverServer struct {
-	ServerServer
+type bookServerServer struct {
+	BookServerServer
 }
 
-func (h *serverServer) Home(ctx context.Context, req *Empty, rsp *StatusRsp) error {
-	return h.ServerServer.Home(ctx, req, rsp)
+func (h *bookServerServer) Home(ctx context.Context, req *Empty, rsp *StatusRsp) error {
+	return h.BookServerServer.Home(ctx, req, rsp)
 }
 
-func (h *serverServer) Push(ctx context.Context, req *PostBook, rsp *StatusUploadedBookRsp) error {
-	return h.ServerServer.Push(ctx, req, rsp)
+func (h *bookServerServer) Push(ctx context.Context, req *PostBook, rsp *StatusUploadedBookRsp) error {
+	return h.BookServerServer.Push(ctx, req, rsp)
 }
 
-func (h *serverServer) Book(ctx context.Context, req *GetBook, rsp *GetBookRsp) error {
-	return h.ServerServer.Book(ctx, req, rsp)
+func (h *bookServerServer) Book(ctx context.Context, req *GetBook, rsp *GetBookRsp) error {
+	return h.BookServerServer.Book(ctx, req, rsp)
 }
 
-func (h *serverServer) GetAllBooks(ctx context.Context, req *Empty, rsp *GetAllBooks) error {
-	return h.ServerServer.GetAllBooks(ctx, req, rsp)
+func (h *bookServerServer) GetAllBooks(ctx context.Context, req *Empty, rsp *GetAllBooks) error {
+	return h.BookServerServer.GetAllBooks(ctx, req, rsp)
 }
 
-func (h *serverServer) GetAllBooksAndSort(ctx context.Context, req *SortType, rsp *GetAllBooksAndSort) error {
-	return h.ServerServer.GetAllBooksAndSort(ctx, req, rsp)
+func (h *bookServerServer) GetAllBooksAndSort(ctx context.Context, req *SortType, rsp *GetAllBooksAndSort) error {
+	return h.BookServerServer.GetAllBooksAndSort(ctx, req, rsp)
 }
 
-func RegisterServerServer(s server.Server, sh ServerServer, opts ...server.HandlerOption) error {
-	type server interface {
+func RegisterBookServerServer(s server.Server, sh BookServerServer, opts ...server.HandlerOption) error {
+	type bookServer interface {
 		Home(ctx context.Context, req *Empty, rsp *StatusRsp) error
 		Push(ctx context.Context, req *PostBook, rsp *StatusUploadedBookRsp) error
 		Book(ctx context.Context, req *GetBook, rsp *GetBookRsp) error
 		GetAllBooks(ctx context.Context, req *Empty, rsp *GetAllBooks) error
 		GetAllBooksAndSort(ctx context.Context, req *SortType, rsp *GetAllBooksAndSort) error
 	}
-	type Server struct {
-		server
+	type BookServer struct {
+		bookServer
 	}
-	h := &serverServer{sh}
+	h := &bookServerServer{sh}
 	var nopts []server.HandlerOption
-	nopts = append(nopts, v31.HandlerEndpoints(ServerServerEndpoints))
-	return s.Handle(s.NewHandler(&Server{h}, append(nopts, opts...)...))
+	nopts = append(nopts, v31.HandlerEndpoints(BookServerServerEndpoints))
+	return s.Handle(s.NewHandler(&BookServer{h}, append(nopts, opts...)...))
 }
